[package]
name = "shl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shl"
crate-type = ["cdylib"]

[dependencies]
arcstr = "1.2.0"
async-process = "1.7"
bumpalo = "3.19.0"
futures = "0.3.31"
lalrpop-util = "0.22.2"
pyo3 = "0.25.0"
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
tokio = { version = "1.46.1", features = ["full"] }

[build-dependencies]
lalrpop = "0.22.2"
